<resources>
    <string name="app_name">ChainCalculator - Sagutdinov</string>
    <string name="but1">1</string>
    <string name="but2">2</string>
    <string name="but3">3</string>
    <string name="but4">4</string>
    <string name="but5">5</string>
    <string name="but6">6</string>
    <string name="but7">7</string>
    <string name="but8">8</string>
    <string name="but9">9</string>
    <string name="but0">0</string>
    <string name="butC">C</string>
    <string name="butPlusMinus">+/-</string>
    <string name="butMinus">-</string>
    <string name="butPlus">+</string>
    <string name="butMult">x</string>
    <string name="butSplit">÷</string>
    <string name="btnPercent">%</string>
    <string name="butDot">.</string>
    <string name="butEquals">eq</string>
    <string name="S">S</string>
    <string name="A">A</string>
    <string name="G">G</string>
    <string name="U">U</string>
    <string name="T">T</string>
    <string name="D">D</string>
    <string name="I">I</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="V">V</string>
</resources>
