<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/outputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/rightOptionGroup"
        android:layout_width="95dp"
        android:layout_height="235dp"
        android:layout_alignTop="@+id/root"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/root"
        app:layout_constraintTop_toTopOf="@+id/root">

        <Button
            android:id="@+id/butSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/outputView"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/butPercent"
            android:text="@string/butSplit" />

        <Button
            android:id="@+id/butMultiplex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butSplit"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/but9"
            android:onClick="btnPress"
            android:text="@string/butMult" />

        <Button
            android:id="@+id/butMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but7"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/but6"
            android:text="@string/butMinus" />

        <Button
            android:id="@+id/butPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but4"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/but3"
            android:text="@string/butPlus" />

        <Button
            android:id="@+id/butEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but1"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/butDot"
            android:text="=" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameChar1">

        <Button
            android:id="@+id/butC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="-35dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/butC" />

        <Button
            android:id="@+id/butPlusMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@id/butC"
            android:onClick="btnPress"
            android:text="@string/butPlusMinus" />

        <Button
            android:id="@+id/butPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/butPlusMinus"
            android:text="@string/btnPercent" />

        <Button
            android:id="@+id/but7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butC"
            android:layout_alignParentLeft="true"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:onClick="btnPress"
            android:text="@string/but7" />

        <Button
            android:id="@+id/but8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butC"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but7"
            android:onClick="btnPress"
            android:text="@string/but8" />

        <Button
            android:id="@+id/but9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/butC"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but8"
            android:onClick="btnPress"
            android:text="@string/but9" />

        <Button
            android:id="@+id/but4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but7"
            android:layout_alignParentLeft="true"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:onClick="btnPress"
            android:text="@string/but4" />

        <Button
            android:id="@+id/but5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but7"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but4"
            android:onClick="btnPress"
            android:text="@string/but5" />

        <Button
            android:id="@+id/but6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but7"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but5"
            android:onClick="btnPress"
            android:text="@string/but6" />

        <Button
            android:id="@+id/but1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but4"
            android:layout_alignParentLeft="true"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:onClick="btnPress"
            android:text="@string/but1" />

        <Button
            android:id="@+id/but2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but4"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but1"
            android:onClick="btnPress"
            android:text="@string/but2" />

        <Button
            android:id="@+id/but3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but4"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but2"
            android:onClick="btnPress"
            android:text="@string/but3" />

        <Button
            android:id="@+id/but0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but1"
            android:layout_alignLeft="@id/but1"
            android:layout_alignRight="@id/but2"
            android:layout_alignParentLeft="true"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:onClick="btnPress"
            android:text="@string/but0" />

        <Button
            android:id="@+id/butDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/but1"
            android:layout_margin="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/but2"
            android:text="@string/butDot" />

    </RelativeLayout>


    <TextView
        android:id="@+id/nameChar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="-8dp"
        android:text="@string/S"
        app:layout_constraintBottom_toTopOf="@+id/root"
        app:layout_constraintEnd_toStartOf="@+id/nameChar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/root"
        app:layout_constraintTop_toBottomOf="@+id/outputView" />

    <TextView
        android:id="@+id/nameChar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/A"
        app:layout_constraintEnd_toStartOf="@+id/nameChar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar1"
        app:layout_constraintTop_toTopOf="@+id/nameChar1" />

    <TextView
        android:id="@+id/nameChar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/G"
        app:layout_constraintEnd_toStartOf="@+id/nameChar4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar2"
        app:layout_constraintTop_toTopOf="@+id/nameChar2" />

    <TextView
        android:id="@+id/nameChar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/U"
        app:layout_constraintEnd_toStartOf="@+id/nameChar5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar3"
        app:layout_constraintTop_toTopOf="@+id/nameChar3" />

    <TextView
        android:id="@+id/nameChar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/T"
        app:layout_constraintEnd_toStartOf="@+id/nameChar6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar4"
        app:layout_constraintTop_toTopOf="@+id/nameChar4" />

    <TextView
        android:id="@+id/nameChar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/D"
        app:layout_constraintEnd_toStartOf="@+id/nameChar7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar5"
        app:layout_constraintTop_toTopOf="@+id/nameChar5" />

    <TextView
        android:id="@+id/nameChar7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/I"
        app:layout_constraintEnd_toStartOf="@+id/nameChar8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar6"
        app:layout_constraintTop_toTopOf="@+id/nameChar6" />

    <TextView
        android:id="@+id/nameChar8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N"
        app:layout_constraintEnd_toStartOf="@+id/nameChar9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar7"
        app:layout_constraintTop_toTopOf="@+id/nameChar7" />

    <TextView
        android:id="@+id/nameChar9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/O"
        app:layout_constraintEnd_toStartOf="@+id/nameChar10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar8"
        app:layout_constraintTop_toTopOf="@+id/nameChar8" />

    <TextView
        android:id="@+id/nameChar10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/V"
        app:layout_constraintEnd_toEndOf="@+id/rightOptionGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameChar9"
        app:layout_constraintTop_toTopOf="@+id/nameChar9" />

</androidx.constraintlayout.widget.ConstraintLayout>